test/interaction/Issue2618.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Set ?1 : Set ?2 : Set ?3 : Set ?4 : Set" nil)
((last . 1) . (agda2-goals-action '(0 1 2 3 4)))
(agda2-info-action "*Error*" "Issue2618.agda:14.9-27: error: [GenericDocError] λ { X → X } when checking that the expression unquote (print (λ { X → X })) has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2618.agda" . 237)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-info-action "*Error*" "Issue2618.agda:21.11-29: error: [GenericDocError] λ { X → X } when checking that the expression unquote (print (λ { X → X })) has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2618.agda" . 341)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-info-action "*Error*" "Issue2618.agda:26.13-31: error: [GenericDocError] λ { X → X } when checking that the expression unquote (print (λ { X → X })) has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2618.agda" . 429)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-info-action "*Error*" "Issue2618.agda:33.11-29: error: [GenericDocError] λ { X → A } when checking that the expression unquote (print (λ { X → A })) has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2618.agda" . 571)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-info-action "*Error*" "Issue2618.agda:38.13-31: error: [GenericDocError] λ { X → A } when checking that the expression unquote (print (λ { X → A })) has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2618.agda" . 659)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
